app/css/app.css
/*Fonts*/
@font-face {
    font-family: texgyreheros-regular;
    src: url(../fonts/texgyreheros-regular.otf);
}

@font-face {
    font-family: texgyreheros-bold;
    src: url(../fonts/texgyreheros-bold.otf);
}

/*body*/
html, body {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    margin: 0;
    padding: 0;
}

/*Sidebar*/
#sidebar {
    display: block;

    width: 50px;
    height: 100%;
    flex-grow: 0;
    flex-shrink: 0;

    overflow: scroll;
    background-color: #000000;
    text-align: center;
}

#sidebar::-webkit-scrollbar {
    display: none;
}

#sidebar ul {
    margin: 0;
    padding: 0;
}

#sidebar li {
    list-style: none;
}

#sidebar li img {
    margin-top: 10px;
    width: 50%;
}

#sidebar h3 {
    margin: 0;
    padding-top: 10px;
    font-size: .6em;
    font-family: texgyreheros-bold, sans-serif;
    color: #C3C3C3;
}

#sidebar hr {
    border: 0;
    height: 1px;
    margin: 5px;
    background-color: #C3C3C3;
}

.toolbox li img:hover {
    cursor: pointer;
}

.palette li:hover {
    cursor: move;
}

/*Canvas*/
#canvas {
    display: inline-block;
    height: 100%;
    flex-grow: 1;
    background-color: #EEEEEE;
}

